--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0-beta.6",
     "typescript": "^5.0.0",
-    "vite": "^6.0.0"
+    "vite": "5.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0-beta.6",
