--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^5.5.2",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0-beta.6",
     "typescript": "^5.0.0",
-    "vite": "5.0.0"
+    "vite": "^6.0.3"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0-beta.6",
